# equilib

./: .editorconfig  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  demo_numpy.py  demo_torch.py  demo_torch_batch.py  demo_video_cpp.py  demo_video_numpy.py  demo_video_torch.py  example.py  example_original.py  hoge_torch.py  index.html  linter.sh  mkdocs.yml  notebook.ipynb  objects.inv  pano2pers.py  pano2pers_torch.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  test.ipynb
.github/workflows/: ci.yml  docs.yml  python-publish.yml
.readme/: README.md  benchmarks.md  contributing.md  cube2equi.md  equi2cube.md  equi2equi.md  equi2pers.md  equirectangular_image.md  grid_sample.md
_old/pano2perspective/: .gitignore  CMakeLists.txt  README.md  example_no_view.py  setup.py
_old/pano2perspective/src/: wrap.cc
_old/pano2perspective/tests/: CMakeLists.txt  test_without_visualization.py
_old/pano2perspective/tests/src/: cuda_func.cu  wrap.cc
api/: index.html
benchmarks/: cache_benchmark.py  index.html
benchmarks/cube2equi/: torch_run.py
benchmarks/equi2cube/: torch_run.py
benchmarks/equi2equi/: numpy_run_baselines.py  torch_run.py
benchmarks/equi2pers/: numpy_convert_grid.py  numpy_inv.py  numpy_matmul.py  numpy_run_baselines.py  torch_run.py
coordinate-system/: index.html
data/: .gitignore
demo/: equi2equi_numpy.py  equi2equi_torch.py  equi2pers_numpy.py  equi2pers_torch.py
docs/: api.md  benchmarks.md  coordinate-system.md  grid-sampling.md  index.md  installation.md  usage.md
equilib/: __init__.py  _cache.py  info.py
equilib/common/: numpy_utils.py  torch_utils.py
equilib/cube2equi/: __init__.py  base.py  cube2equi_numpy.py  cube2equi_torch.py  numpy.py  torch.py
equilib/cube2equi/cube2equi_numpy/: cube2equi.py  utils.py
equilib/cube2equi/cube2equi_torch/: cube2equi.py  utils.py
equilib/equi2cube/: __init__.py  base.py  equi2cube_numpy.py  equi2cube_torch.py  numpy.py  torch.py
equilib/equi2cube/equi2cube_numpy/: equi2cube.py  utils.py
equilib/equi2cube/equi2cube_torch/: equi2cube.py  utils.py
equilib/equi2equi/: __init__.py  base.py  equi2equi_numpy.py  equi2equi_torch.py  numpy.py  torch.py
equilib/equi2equi/equi2equi_numpy/: equi2equi.py  utils.py
equilib/equi2equi/equi2equi_torch/: equi2equi.py  utils.py
equilib/equi2ico/: base.py  numpy.py  torch.py
equilib/equi2pers/: __init__.py  base.py  equi2pers_numpy.py  equi2pers_torch.py  numpy.py  torch.py
equilib/equi2pers/equi2pers_numpy/: equi2pers.py  utils.py
equilib/equi2pers/equi2pers_torch/: equi2pers.py  utils.py
equilib/grid_sample/: README.md  __init__.py
equilib/grid_sample/cpp/: setup.py
equilib/grid_sample/cpp_grid_sample/: setup.py
equilib/grid_sample/numpy/: __init__.py  bicubic.py  bilinear.py  grid_sample.py  nearest.py
equilib/grid_sample/numpy_grid_sample/: __init__.py  faster.py  interp.py  naive.py
equilib/grid_sample/torch/: __init__.py  bicubic.py  bilinear.py  grid_sample.py  native.py  nearest.py
equilib/grid_sample/torch_grid_sample/: __init__.py  basic.py  interp.py  torch_func.py  utils.py
equilib/ico2equi/: base.py  numpy.py  torch.py
equilib/numpy_utils/: __init__.py  grid.py  icosahedron.py  intrinsic.py  rotation.py
equilib/pers2equi/: base.py  numpy.py  torch.py
equilib/torch_utils/: __init__.py  func.py  grid.py  icosahedron.py  intrinsic.py  rotation.py
equilib/utils/: __init__.py  rotation.py
equilib/utils/numpy_utils/: __init__.py  coord.py  rotation.py
grid-sampling/: index.html
installation/: index.html
notebooks/: equi2equi_test.ipynb
pano2pers/: __init__.py  demo.py  faster.py  naive.py  pano2pers.ipynb  test.ipynb
pano2pers/src/: setup.py
pano2pers_cpp/: setup.py
pano2pers_cpp/src/: cuda_func.cu  demo.cc  pano2perspective.hh
pano2pers_cpp/tests/: test_new.py  test_opencv_video_capture.py
pano2pers_numpy/: README.md  debugging.ipynb  example.py  faster.py  naive.py  utils.py
pano2pers_torch/: __init__.py  basic.py  pano2pers.py  torch_func.py  utils.py
panolib/: __init__.py
panolib/equi2pers/: base.py
panolib/grid_sample/: README.md  __init__.py
panolib/pano2pers/: __init__.py  base.py
panolib/pano2pers_numpy/: __init__.py  utils.py
panolib/pano2pers_torch/: README.md  utils.py
scripts/: demo_equi2equi_numpy.py  demo_equi2equi_torch.py  demo_equi2pers_numpy.py  demo_equi2pers_torch.py  demo_pano2pers_numpy.py  demo_pano2pers_torch.py  demo_torch_batch.py  demo_torch_old.py  demo_video_cpp.py  demo_video_numpy.py  draw_bfov.py  equi2equi_numpy.py  equi2equi_torch.py  equi2pers_numpy.py  equi2pers_torch.py  ipython_test_imports.py
search/: search_index.json
tests/: test_cache_consistency.py  test_cube2equi.py  test_equi2cube.py  test_equi2equi.py  test_equi2pers.py  test_issue31_pole.py
tests/common/: timer.py
tests/cube2equi/: numpy_run_baselines.py  test_numpy.py  test_torch.py  torch_run.py
tests/data/: .gitignore
tests/equi2cube/: numpy_run_baselines.py  test_numpy.py  test_torch.py  torch_run.py  torch_run_pad.py
tests/equi2equi/: numpy_run_baselines.py  test_numpy.py  test_torch.py  torch_run.py
tests/equi2pers/: numpy_convert_grid.py  numpy_inv.py  numpy_matmul.py  numpy_prep.py  numpy_run_baselines.py  test_numpy.py  test_torch.py  torch_run.py
tests/grid_sample/: README.md  helpers.py  test_numpy.py
tests/helpers/: benchmarking.py  image_io.py  mem.py  rot_path.py  sample_data.py  timer.py
tests/pano2pers/: test_numpy.py  test_torch.py
tests/test_cube2equi/: test_base.py  test_numpy.py  test_torch.py
tests/test_equi2cube/: test_base.py  test_numpy.py  test_torch.py
tests/test_equi2equi/: test_base.py  test_numpy.py  test_torch.py
tests/test_equi2pers/: test_base.py  test_numpy.py  test_torch.py
tests/test_grid_sample/: test_numpy.py  test_torch.py
tests/test_numpy_utils/: test_grid.py  test_rotation.py
tests/test_torch_utils/: test_grid.py  test_rotation.py
usage/: index.html
(+32 files in other folders)
